# brochure-generator

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  app.py  llm_service.py  main.py  models.py  pyproject.toml  requirements.txt  scraper.py
backend/app/: main.py
backend/app/api/: brochure.py  flyer.py  search.py  tts.py
backend/app/core/: config.py
backend/app/schemas/: schemas.py
backend/app/services/: web_search.py
brochure-generator/: .gitignore  LICENSE
brochure-generator/backend/app/api/: search.py
brochure-generator/backend/app/services/: image_service.py  llm_service.py  scraper.py  tts_service.py
brochure-generator/frontend/: index.html
frontend/: Dockerfile  nginx.conf
frontend/css/: style.css
frontend/js/: api.js  app.js
